# airbnbstayfinder-airbnbscraper

./: .gitignore
airbnbstayfinder/: .env.example  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test.json
airbnbstayfinder/app/: globals.css
airbnbstayfinder/app/api/airbnbstay/: route.ts
airbnbstayfinder/app/dashboard/: layout.tsx  page.tsx
airbnbstayfinder/components/: dashboard-navbar.tsx
airbnbstayfinder/components/ui/: button.tsx
airbnbstayfinder/features/airbnbstay/actions/: airbnbstay.action.ts  find-airbnbstay-by-url.action.ts  set-airbnbstay-interest.action.ts
airbnbstayfinder/features/airbnbstay/actions/test/: airbnbstay.action.ts  by-id.json  by-id.min.json  getIAInfo.js  (+1 more)
airbnbstayfinder/features/airbnbstay/components/: airbnbstay-form.tsx  get-airbnbstay.tsx  null-interest-airbnbstay-grid-form.tsx
airbnbstayfinder/features/airbnbstay/domain/: airbnbstay.ai.ts  airbnbstay.ia.raw.ts  airbnbstay.mapper.ts  airbnbstay.raw.ts  airbnbstay.ts
airbnbstayfinder/features/airbnbstay/repo/: ai.factory.ts  airbnbstay.ai.repo.ts  airbnbstay.repo.ts  http.airbnbstay.repo.ts  ollama.airbnbstay.ai.repo.ts  openai.airbnbstay.ai.repo.ts  prisma.airbnbstay.repo.ts
airbnbstayfinder/features/airbnbstay/services/: get-airbnbstay-by-url.service.ts  set-airbnbstay-interest.service.ts  verify-airbnbstay-exists.service.ts
airbnbstayfinder/lib/db/: prisma.ts
airbnbstayfinder/prisma/: schema.prisma
pyairbnb-api/: README.md  README_API.md  pyproject.toml
pyairbnb-api/api/: api_server.py
pyairbnb-api/src/pyairbnb/: standardize.py
(+3 files in other folders)
